--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Walsallion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../build/js/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../build/main.css">
     <script src="../build/js/main.js"></script>
 </head>
 <body>
